# share-a-keyboard

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: client.cpp.11CF37B433B6B1FE.idx  networking.cpp.116FFA100E270332.idx  networking.hpp.FD88931A8803DB4F.idx  server.cpp.6DBCE57515B27A8C.idx
.github/workflows/: cmake-build.yml
cmake/: port-gen.py
include/share-a-keyb/: getch.h  keyboard.h  networking.h  networking.hpp  pch.h
src/client/: client.c  client.cpp  keysim.c
src/server/: server.c  server.cpp
src/shared/: keyboard-reader-linux.h  keyboard-reader-winapi.h  keyboard-writer-linux.h  keyboard-writer-winapi.h  keyboard.c  networking.c  networking.cpp
